Make SerialIoHandler RefCountedThreadSafe instead of just RefCounted

We pass this object around to different threads and sequences, so we
should be using atomic reference counting.

Bug: 730774
Change-Id: If0a90dd1ac9016259a4d22533d3468dc7976469f
Reviewed-on: https://chromium-review.googlesource.com/527696
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Commit-Queue: Charlie Andrews <charliea@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477963}
Former-commit-id: 38a020a390d2e6a4e3ffe4cef863daf11b31440f